# workflow-patterns

./: .gitignore  README.md  main.py  mcp.json  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
docs/plans/: 2026-03-08-ai-chatbot-design.md  2026-03-08-ai-chatbot-plan.md  2026-03-08-api-integration-design.md  2026-03-08-data-pipeline-design.md  2026-03-08-email-automation-design.md  2026-03-08-email-automation-plan.md  2026-03-08-scheduled-notifications-design.md
evals/: run_evals.py  test_cases.json
examples/ai-chatbot/: .env.example  .gitignore  pyproject.toml  run.py
examples/ai-chatbot/src/chatbot/: chat.py  display.py  memory.py  models.py  personas.py
examples/ai-chatbot/tests/: test_chat.py  test_display.py  test_memory.py  test_models.py  test_personas.py
examples/ai-content-creation/: .gitignore  README.md  pyproject.toml  run.py
examples/ai-content-creation/src/content_workflow/: deliver.py  fetch.py  format.py  models.py  presets.py  summarize.py
examples/ai-content-creation/tests/: test_deliver.py  test_fetch.py  test_format.py  test_presets.py  test_summarize.py
examples/api-integration/: .env.example  pyproject.toml  run.py
examples/api-integration/src/api_workflow/: client.py  display.py  integrations.py  models.py  storage.py  transform.py
examples/api-integration/tests/: test_client.py  test_display.py  test_integrations.py  test_models.py  test_storage.py  test_transform.py
examples/data-pipeline/: .env.example  pyproject.toml  run.py
examples/data-pipeline/data/: sales_data.csv
examples/data-pipeline/src/pipeline/: display.py  models.py  pipelines.py  reader.py  transforms.py  writer.py
examples/data-pipeline/tests/: test_display.py  test_models.py  test_pipelines.py  test_reader.py  test_transforms.py  test_writer.py
examples/email-automation/: .env.example  pyproject.toml  run.py
examples/email-automation/src/email_workflow/: display.py  models.py  renderer.py  sender.py  templates.py
examples/email-automation/tests/: test_display.py  test_models.py  test_renderer.py  test_sender.py  test_templates.py
examples/scheduled-notifications/: .env.example  pyproject.toml  run.py
examples/scheduled-notifications/data/: sample_events.json
examples/scheduled-notifications/src/notify_workflow/: display.py  models.py  notify.py  rules.py  schedules.py  sources.py
examples/scheduled-notifications/tests/: test_display.py  test_models.py  test_notify.py  test_rules.py  test_schedules.py  test_sources.py
scripts/: generate_site.py
src/workflow_patterns/: __init__.py  models.py
src/workflow_patterns/mcp_server/: server.py
src/workflow_patterns/parser/: parse.py
src/workflow_patterns/patterns/: analyzer.py
src/workflow_patterns/translator/: claude_code.py
tests/: test_analyzer.py  test_mcp_server.py  test_parser.py  test_translator.py
