[project]
name = "workflow-patterns"
version = "0.1.0"
description = "Analyze 7000+ n8n workflows to extract automation patterns and translate them into Claude Code architectures"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "mcp[cli]",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_patterns"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
