[project]
name = "ai-chatbot"
version = "0.1.0"
description = "AI Chatbot workflow: trigger -> ai -> data -> deliver"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
