[project]
name = "ai-content-creation"
version = "0.1.0"
description = "AI Content Creation workflow: api -> ai -> transform -> deliver"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
