[project]
name = "email-automation"
version = "0.1.0"
description = "Email Automation workflow: trigger -> transform -> deliver"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
