[project]
name = "scheduled-notifications"
version = "0.1.0"
description = "Scheduled Notifications workflow: trigger -> api -> logic -> deliver"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notify_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
